--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>XRP App Game</title>
+  <title>Rich App Game</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🚀 XRP Miner</h1>
+    <h1>🚀 Rich Miner</h1>
     <p>💰 Баланс: <span id="balance">0</span> TON</p>
     <p>⚡ Потужність: <span id="power">1</span></p>
-    <button onclick="mine()">🔨 Майнити</button>
+    <button class="coin-button" onclick="mine()">XRP</button>
     <button onclick="upgrade()">⬆️ Прокачати</button>
     <hr />
     <p>👥 Рефералів: <span id="referrals">0</span></p>
